--- a/views/changrobert.html
+++ b/views/changrobert.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   	<div id="FormDiv">
-  		<h2>Escolha o nome da máquina</h2>
+  		<h2>Escolha o nome do processo</h2>
 	  	<form action="">
 			Nome: <input id="machineNameForm" autocomplete="off" /><br><br>
 			Uid: <input id="machineUidForm" autocomplete="off" /><button>Send</button>
@@ -17,7 +17,7 @@
 	<div id="leaderDiv">
 	</div>
 	<div id="logdiv" style="display: none">
-		<h3>Log da máquina</h3>
+		<h3>Log do processo</h3>
 		<ul id="log"></ul>
 	</div>
 	<script src="/socket.io/socket.io.js"></script>
@@ -28,7 +28,7 @@
     			socket.emit('machineNameChosen', {"MachineName": $('#machineNameForm').val(), "Uid": $('#machineUidForm').val()});
     			$('#infoDiv').hide();
     			$('#hiddenID').hide();
-				$('#infoDiv').html("<h2>O nome da maquina é: " + $('#machineNameForm').val() + "</h2>");
+				$('#infoDiv').html("<h2>O nome do processo é: " + $('#machineNameForm').val() + "</h2>");
 			    $('#infoDiv').html($('#infoDiv').html() + "<h4>Seu UID é: " + $('#machineUidForm').val() + "</h4>");
 			    $('#hiddenUid').hide();
     			$('#machineNameForm').val('');
@@ -60,7 +60,7 @@
 					+ ". Maior Uid: " + message.highUid;
 					$('#log').append($('<li>').text(logText));
 					if($('#ElectionDiv').html() == "Participou da eleição" && machineUid == message.highUid){
-						$('#log').append($('<li>').text("Essa máquina é o novo líder."));
+						$('#log').append($('<li>').text("Esse processo é o novo líder."));
 			   			$('#ElectionDiv').html("Não participou da eleição");
 						$('#leaderDiv').html("O lider agora é: " + machineUid);
 						socket.emit('ElectedMessage', {"sender": machineID, "elected": machineUid});
